# fp-result

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
fp_result/: __init__.py  option.py  result.py
fp_result/utils/: __init__.py  exception_mapper.py
tests/: test_option.py  test_result.py
